src/test/ui/resolve/issue-39226.stderr
error[E0423]: expected value, found struct `Handle`
  --> $DIR/issue-39226.rs:11:17
   |
LL |         handle: Handle
   |                 ^^^^^^
   |                 |
   |                 did you mean `Handle { /* fields */ }`?
   |                 help: a local variable with a similar name exists: `handle`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
